fix: loading animation only on pressed button
Also refactor fixed view to composable style Vue component

Refs: XRDDEV-2650

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -561,6 +561,7 @@
     "CN": "Server DNS Name",
     "confirmPin": "Confirm PIN",
     "csr": {
+      "certificationService": "Certification Service",
       "certService": "Certification Service",
       "client": "Client",
       "csrFormat": "CSR Format",
