fix: Unregister member from security server
cucumber for used servers

Refs: XRDDEV-2652

--- a/src/central-server/admin-service/ui/src/locales/en.json
+++ b/src/central-server/admin-service/ui/src/locales/en.json
@@ -594,7 +594,7 @@
         "globalGroups": "Global Groups",
         "group": "Group",
         "ownedServers": "Owned Servers",
-        "clientOfServers": "Used Servers",
+        "usedServers": "Used Servers",
         "server": "Server",
         "enterCode": "Enter Member Code",
         "deleteMember": "Delete member",
