--- a/src/packages/src/xroad/ubuntu/generic/changelog
+++ b/src/packages/src/xroad/ubuntu/generic/changelog
@@ -1,3 +1,10 @@
+xroad (7.5.1-0) stable; urgency=medium
+
+  * Change history is found at /usr/share/doc/xroad-
+    common/CHANGELOG.md.gz
+
+ -- NIIS <info@niis.org>  Mon, 12 Aug 2024 13:07:51 +0000
+
 xroad (7.5.0-1) stable; urgency=medium
 
   * Change history is found at /usr/share/doc/xroad-
