fix: fix UI issues on SS
Refs: XRDDEV-2697

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -601,7 +601,8 @@
     "tokenPin": "Token PIN",
     "url": "URL",
     "username": "Username",
-    "certificationService": "Certification Service"
+    "certificationService": "Certification Service",
+    "certificateService": "Certification Service"
   },
   "footer": {
     "copyright": {
