fix: fix UI issues on SS
small fix

Refs: XRDDEV-2697

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -601,8 +601,7 @@
     "tokenPin": "Token PIN",
     "url": "URL",
     "username": "Username",
-    "certificationService": "Certification Service",
-    "certificateService": "Certification Service"
+    "certificationService": "Certification Service"
   },
   "footer": {
     "copyright": {
