feat(CS): EC key support for global configuration
it works

Refs: XRDDEV-2695

--- a/src/central-server/admin-service/ui/src/locales/en.json
+++ b/src/central-server/admin-service/ui/src/locales/en.json
@@ -460,6 +460,7 @@
     "logIn": "Log in",
     "logOut": "Log out",
     "signKey": "Sign key",
+    "algorithm": "Key algorithm",
     "token": "Token:",
     "dialog": {
       "delete": {
