feat: automatic certificate renewal mail notifications
let users activate new certs and clean up old; cert activate ocsp verification; acme.yml contacts and account keystore new password migration; mail notification on when auth cert registered; moved mail notification logic to commons

refs: XRDDEV-2667

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -409,6 +409,7 @@
       "eab_credentials_missing": "External Account binding credentials missing, but required",
       "eab_secret_length": "Invalid external account binding base64 secret length",
       "account_key_pair_error": "Getting key pair for ACME server account failed",
+      "account_keystore_password_missing": "ACME account keystore password missing from the acme.yml configuration file",
       "fetching_metadata_error": "Fetching ACME server metadata failed. ACME Server might be unreachable",
       "account_creation_failure": "Creating Account on ACME server failed. If external account binding is required, check that the correct credentials are configured in acme.yml",
       "order_creation_failure": "Creating new Order on ACME server failed",
