--- a/src/central-server/admin-service/ui/src/locales/en.json
+++ b/src/central-server/admin-service/ui/src/locales/en.json
@@ -508,6 +508,8 @@
     "hashInfo": "Hash (SHA-256)",
     "rsaExp": "RSA Public Key Exponent",
     "rsaModulus": "RSA Public Key Modulus",
+    "ecParameters": "EC Public Key Parameters",
+    "ecPoint": "EC Public Key Point",
     "keyUsage": {
       "CRL_SIGN": "CRL Sign",
       "DATA_ENCIPHERMENT": "Data Encipherment",
