--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -762,6 +762,7 @@
     "orderAcmeCertificate": "Order Certificate",
     "acmeCertOrdered": "Certificate successfully ordered",
     "readOnly": "Read-only:",
+    "keyAlgorithm": "Key Algorithm:",
     "registrationRequest": "Registration request",
     "renewal": "Automatic Renewal",
     "request": "Request",
