refactor: refactor language switching
refactor locale message loading and switching

Refs: XRDDEV-2728

--- a/src/shared-ui/src/locales/en.json
+++ b/src/shared-ui/src/locales/en.json
@@ -168,7 +168,7 @@
   },
   "fields": {
     "password": "Password",
-    "username": "LIB-Username",
+    "username": "Username",
     "shared": "sharedlib",
     "code": "Code",
     "description": "Description",
